# wisho

./: .gitignore  AGENTS.md  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
resources/: README
src/migrations/: env.py  migrations.yaml
src/migrations/entry/: 01-table.sql
src/migrations/entry_priority/: 01-table.sql
src/migrations/gloss/: 01-table.sql
src/migrations/kanji/: 01-table.sql
src/migrations/reading/: 01-table.sql
src/migrations/reading_restriction/: 01-table.sql
src/migrations/sense/: 01-table.sql
src/migrations/sense_pos/: 01-table.sql
src/migrations/versions/: 7f2f4b07283d_change_json_to_jsonb.py  ace035ef51b5_init.py  b2ceaffcb2fe_search_indexes.py  c2140cee9c56_create_tables.py
src/resources/: schema.sql
src/scripts/: seed.py
src/tests/: conftest.py
src/tests/controllers/: test_search_controller.py
src/tests/data/: jmdicte_samples.xml
src/wisho/: __init__.py  main.py  settings.py
src/wisho/api/: __init__.py
src/wisho/api/v1/: __init__.py  search.py
src/wisho/controllers/: search.py
src/wisho/core/: config.py  helpers.py  setup.py
src/wisho/core/db/: session.py
src/wisho/db/: __init__.py  engine.py  jmdict.py  seed.py
src/wisho/jmdict/: dto.py  helpers.py  models.py  parser.py
src/wisho/models/: __init__.py  entry.py  entry_element.py  entry_priority.py  gloss.py  jmdict.py  kanji.py  part_of_speech.py  priority.py  reading.py  reading_information.py  reading_restriction.py  sense.py  sense_pos.py
src/wisho/repositories/: entry.py  word.py
src/wisho/schemas/: entry.py
tests/data/: sample_entry.xml
tests/jmdict/: test_parsing.py
