[project]
name = "wisho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Massimo Meert", email = "pro@masmeert.com" }
]
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "pydantic>=2.12.3",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
wisho = "wisho:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "types-lxml>=2025.8.25",
]
