[project]
name = "wisho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Massimo Meert", email = "pro@masmeert.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.1",
    "jmdict-parser",
    "lxml>=6.0.2",
    "monotome>=0.2.0",
    "psycopg>=3.2.12",
    "psycopg-binary>=3.2.12",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
wisho = "wisho:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.14.2", "types-lxml>=2025.8.25"]

[tool.uv.sources]
jmdict-parser = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "N",
    "B",
    "A",
    "C4",
    "T10",
    "ARG",
    "PTH",
    "ANN", # type annotations
    "S",   # security best practices
    "BLE", # blind except statements
    "FBT", # boolean trap parameters
    "C90", # complexity metrics
    "TRY", # exception handling best practices
    "SLF", # private member access
    "TCH", # type checking issues
    "RUF", # Ruff-specific rules
    "ERA", # eradicate commented-out code
    "PL",  # pylint conventions
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
